--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": "^8.3 || ^8.4",
+    "php": "^8.3 || ^8.4 || ^8.5",
     "php-http/discovery": "^1.19",
     "psr/http-client": "^1.0",
     "psr/http-message": "^2.0",
@@ -13,7 +13,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^12.0",
-    "vimeo/psalm": "^6.13",
+    "vimeo/psalm": "^6.14",
     "phpstan/phpstan": "^2.1",
     "friendsofphp/php-cs-fixer": "^3.88",
     "http-interop/http-factory-guzzle": "^1.2",
